tests/miniJava/neg/006715_mutation.MiniJava
class java { public static void int [] java ; Main ( String [ ] java ) { { } } }
